2010-04-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/rtc/ds1375.c: #include <unistd.h>.

2010-03-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/network/i82586.c: Readdress use of ctype methods per
	recommendation from D.J. Delorie on the newlib mailing list. We
	should pass an unsigned char into these methods.

2010-03-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/ide/ide_controller.c: Fix warnings for uninitialized
	variable.

2010-03-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/network/i82586.c: Fix warnings for ctype methods.

2010-02-19	Chris Johns <chrisj@rtems.org>

	* libchip/ide/ide_controller.c: Create the devices as block
	devices.

2010-01-18	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/ide/ata_internal.h, libchip/ide/ata.c
	libchip/i2c/spi-sd-card.c: Update for block device API change.

2010-01-18	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* libchip/display/disp_hcms29xx.c,
	libchip/display/disp_hcms29xx.h, libchip/display/font_hcms29xx.c,
	libchip/display/font_hcms29xx.h: various fixes

2009-12-18	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1474
	* libchip/i2c/spi-sd-card.c, libchip/ide/ata.c: Update for block
	device API change.

2009-12-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/network/greth.c: Eliminate unused type
	rtems_clock_time_value.

2009-12-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/network/dec21140.c: Warning elimination
	(dec21140_softc->base now is an uint32_t).

2009-12-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1483/cpukit
	* libchip/network/dec21140.c, libchip/network/elnk.c,
	libchip/network/if_dc.c: Move #include <rtems/pci.h> into #if
	*_SUPPORTED-guarded code sections.

2009-12-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/network/dec21140.c, libchip/network/elnk.c,
	libchip/network/if_dc.c: Ensure PCI drivers are built on all
	supported configurations. PowerPC conditionals were not current and